2002-10-20  Chris Blumenberg  <cblu@apple.com>

	Fixed possible build failure.

        * kwq/KWQDOMNode.cpp:
        (isImage): remove unused variable.

2002-10-20  Chris Blumenberg  <cblu@apple.com>

	Partial fix for:
	3023814 - contexual menus and dragging doesn't work for some images

	The image map case is still broken because I need to find a way to get the RenderImage for an AREA node. Anyone know how?

        * kwq/KWQDOMNode.cpp:
        (isImage): Also return true if the node is an INPUT tag with TYPE set to "image"

2002-10-20  Darin Adler  <darin@apple.com>

	- fixed 3076390 -- crash in DOM::DocumentImpl::setParsing loading thread detail page
	at groups.apple.com

        * khtml/khtml_part.cpp: (KHTMLPart::openURL): Don't do any redirect special case
	if the document is nil. Just do a normal load in that case.

2002-10-20  Darin Adler  <darin@apple.com>

	- fixed 3079864 -- REGRESSION: assertion failure on any page with a form element

        * khtml/html/html_formimpl.cpp: (HTMLGenericFormElementImpl::attach):
	Roll back the parent call to use NodeBaseImpl::attach. Not sure why I changed that
	at the last minute before my last checkin, but it was *bad*.

	- fixed a crash I observed when clicking on an about:blank page

        * kwq/WebCoreBridge.mm: (-[WebCoreBridge elementAtPoint:]): Check for nil renderer.

2002-10-19  Darin Adler  <darin@apple.com>

	- fixed 3075032 -- textarea contents sometimes aren't shown

	The root of the problem is that we weren't delivering close calls to
	the render objects in the case where we created them late due to our FOUC
	fix. I taught the DOM implementation to remember that a close call is
	due, and deliver it when the render object is created. We can probably
	replace the closeEntireTree hack with this too. I'll talk to Dave about
	that on Monday.

        * khtml/xml/dom_nodeimpl.h: Add m_rendererNeedsClose and closeRenderer.
        * khtml/xml/dom_nodeimpl.cpp: