@@ -360,7 +360,6 @@ bool RenderImage::nodeAtPoint(NodeInfo& info, int _x, int _y, int _tx, int _ty)
 
 void RenderImage::updateFromElement()
 {
-#ifdef APPLE_CHANGES
     // Treat a lack of src or empty string for src as no image at all, not the page itself
     // loaded as an image.
     DOMString attr = element()->getAttribute(ATTR_SRC);
@@ -369,16 +368,12 @@ void RenderImage::updateFromElement()
         new_image = NULL;
     else
         new_image = element()->getDocument()->docLoader()->requestImage(khtml::parseURL(attr));
-#else
-    CachedImage *new_image = element()->getDocument()->docLoader()->
-                             requestImage(khtml::parseURL(element()->getAttribute(ATTR_SRC)));
-#endif
 
     if(new_image && new_image != image && (!style() || !style()->contentObject())) {
         loadEventSent = false;
+        new_image->ref(this);
         if(image) image->deref(this);
         image = new_image;
-        image->ref(this);
         berrorPic = image->isErrorImage();
     }
 
